--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -651,7 +651,7 @@ $Q(x)=\sum_{1\leq k, l \leq n}a_{k l}x_k x_l$,  $x=(x_1, \ldots, x_n)$. $Q(x)=(x
 
 \section{Лекция 9.}
 
-(три минуты начала лекции проспаны)
+(три минуты начала лекции проспаны) \\ 
 
 \begin{theorem}
     Пусть $F:G\rightarrow \RR$, $G\subset \RR^2$ - открытое. Также выполнено: 
@@ -710,7 +710,7 @@ $f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$.
 
 Попробуем начать формулировать теорему о неявной функции. Пусть $x=(x_1, \ldots, x_n)$, $y=(y_1, \ldots, y_n)$, и $F_i(\text{всех переменных})$ при $1\leq n$. Тогда если $x^0=(x_1^0, \ldots, x_m^0)$, $y^0=(y_1^0, \ldots, y_n^0)$ так что $F_k(x^0, y^0)=0$ для любого $1\leq k\leq n$. $F_k(x, y)=0$ тогда и только тогда, когда $y=f(x)$, $y^0=f(x^0)$. \ 
 
-Зафиксируем $(x_1, \ldots, x_m)$, Рассмотрим для $F_k$, $F:\RR^n\rightarrow \RR^n$, тогда дифференциал $F$ - матрица $A$ обратима. 
+Зафиксируем $(x_1, \ldots, x_m)$, Рассмотрим для $F_k$, $F:\RR^n\rightarrow \RR^n$, тогда дифференциал $F$ - матрица $A$ обратима. \\
 
 \begin{theorem}
     $F: G\rightarrow \RR^n$, где $G$ - открытое в $\RR^{m+n}$ и выоплнено следующее: 
@@ -725,5 +725,129 @@ $f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$.
 
     $f'(x)=-[f_y'(x, f(x))]^{-1}\cdot F_x'(x, f(x))$. 
 \end{theorem}
+
+
+\newpage
+
+\section{Основные теоретические факты для контрольных.}
+
+(На мой субъективный выбор). \ 
+
+\subsection{Интегралы.}
+
+Интегралы бывают: \ 
+
+\begin{itemize}
+    \item \textit{неопределёнными} - совокупность всех первообразных функций;
+    \item \textit{определённым} - предел интегральных сумм;
+    \item \textit{несобственным}, если он определённый и либо область определения бесконечна, либо если подынтегральная функция неограничена в окрестности некоторых точек области интегрирования. 
+\end{itemize}
+
+Вычисляем первообразную самыми разными способами: \
+
+\begin{itemize}
+    \item \textit{угадывание} - почему нет;
+    \item \textit{введение нового аргумента} - если $\int g(x)dx = G(x)+C$, то $\int g(u)du = G(u)+C$, где $u = \varphi(x)$ - непрерывно дифференцируемая функция;
+    \item \textit{разложение} - по линейности;
+    \item \textit{подстановка} - если $g(x)$ - непрерывная, то, полагая, что $x=\varphi(t)$, где $\varphi(t)$ непрерывна вместе со своей производной, получим, что $\int g(x)dx = \int g(\varphi(t))\varphi'(t)dt$. 
+    \item \textit{по частям} - если $u$ и $v$ - некоторые дифференцируемые функции от $x$, то $\int udv = uv - \int vdu$. 
+\end{itemize}
+
+Также неплохо бы выучить хотя бы немного базовых интегралов. \ 
+
+Несобственные интегралы могут сходиться или нет. Рассмотрим свойства сходимости: \ 
+
+\begin{stat}
+    (Критерий Коши сходимости несобственного интеграла). Если функция $x\mapsto f(x)$ определена на промежутке $[a, \omega[$ и интегрируема на любом отрезке $[a, b]$, лежащем внутри, то интеграл $\int_a^\omega f(x)dx$ сходится тогда и только тогда, когда для любого $\varepsilon>0$ можно указать $B\in [a, \omega[$ так, что при юлбых $b_1, b_2\in [a, \omega[$ таких, что $B<b_1, b_2$ имеет мечто соотношение 
+    \[
+        \bigg| \int_{b_1}^{b_2}f(x)dx\bigg| < \varepsilon. 
+    \]
+\end{stat}
+
+\begin{defn}
+    Про несобственный интеграл $\int_a^\omega f(x)dx$ говорят, что он \textit{сходится абсолютно}, если сходится интеграл $\int_a^\omega |f|(x)dx$. 
+\end{defn}
+
+\begin{stat}
+    Если функция $f$ определена на промежутке, интегрируема на каждом его отрезке, и неотрицательна на нём, то несобственный интеграл существует в том и только том случае, когда функция ограничена на $[a, \omega[$. 
+\end{stat}
+
+\begin{theorem}
+    (Теорема сравнения). Пусть функции $f(x)$ и $g(x)$ определены на промежутке $[a, \omega[$ и интегрируемы на любом его отрезке. Если на промежутке $0\leq f(x) \leq g(x)$, то из сходимости интеграла по $g$ следует сходимость интеграла по $f$. 
+\end{theorem}
+
+\begin{defn}
+    Несобственный интеграл $\int_a^\omega f(x;\alpha)dx$ называется равномерно сходящимся на $E$, если 
+    \[
+        \forall \varepsilon>0 \exists t\in(a;b) \forall \xi \in [t, \omega) \forall \alpha \in E \mapsto \bigg| \int_\xi^\omega f(x;\alpha)dx \bigg|<\varepsilon.
+    \]
+\end{defn}
+
+\begin{theorem}
+    (Признак Вейеерштрасса). Если подынтегральная функция в параметрическом интеграле может быть ограничена функцией одной переменной сверху, и интеграл от данной функции сходится, то и изначальный интеграл сходится.
+\end{theorem} \
+
+\begin{theorem}
+    (Признак Дирихле). Достаточное условие равномерной сходимости интеграла вида $\int_a^{+\infty}f(x)g(x)dx$. Если выполнены следующие условия: 
+
+    \begin{itemize}
+        \item первообразная $f(x)$ ограничена; 
+        \item $g(x)$ дифференцируема, больше нуля, её производная отрицательна; 
+        \item $\lim_{x\rightarrow +\infty} g(x)=0$. 
+    \end{itemize}
+
+    Тогда $\int_a^{+\infty}f(x)g(x)dx$ сходится.
+\end{theorem}
+
+\subsection{Кривые.}
+
+\begin{defn}
+    \textit{Кривые в $\RR^n$} - непрерывное отображение $f:[a, b]\rightarrow \RR^n$.
+\end{defn}
+
+Нас, в основном, интересуют прямые, которые можно непрерывно нарисовать одной линией, если говорить на простейшем языке. \ 
+
+Если непрерывная кривая $\gamma$ задана параметрически: $x_1=f_1(t)$, $x_2=f_2(t)$, \dots, то можно найти её длину:
+\[
+    \int_a^b\sqrt{(f_1')^2(x)+\ldots+(f_n')^2(x)}dx. 
+\]
+Естественно, все $f_i$ должны быть дифференцируемы на нужном промежутке.
+
+\subsection{Многомерный анализ.} 
+
+\begin{defn}
+    $f$ \textit{дифференцируема} в точке $(x_1, \ldots, x_m)$, если $f(y)=f(x)+L(y-x)+o(||x-y||)$, где $L$ - линейное отображение $\RR^m\rightarrow \RR$, причём однородное, то есть, $L(0)=0$.
+\end{defn}
+
+\begin{defn}
+    Это линейное отображение $L$ называется \textit{дифференциалом} в точке $x$.
+\end{defn}
+
+\begin{remark}
+    Зачастую ищем по определению, можно по ласт теореме из подтемы.
+\end{remark}
+
+\begin{defn}
+    \textit{Частная производная}. Пусть имеется $f:\RR\rightarrow \RR$, $f(x_1, \ldots, x_n)$, $x^0=(x_1^0, \ldots, x_n^0)$. Тогда частная производная по $x_k $, $f(x_1^0, \ldots, x_{k-1}^0, x, x_{k+1}^0, \ldots, x_m^0)=g(x), g'(x_k^0)$. $\frac{\partial f}{\partial x_k}\bigg|_{x^0}:=g'(x_k^0)=\lim_{\varepsilon\rightarrow 0}\frac{f(\ldots, x_k^0+\varepsilon, \ldots)-f(\ldots)}{\varepsilon}$. 
+\end{defn}
+
+\begin{defn}
+    \textit{Производная по направлению}. Пусть направление задаётся $e\in\RR^n$, $||e||=1$, $f$ - дифференцируема по направлению $e$, если $g(t)=f(x^0+te)$, $t\in\RR$ и существует $g'(0)$, то производная по направлению $e$ - $g'(0)=\lim_{t\rightarrow 0}\frac{f(x^0+te)-f(x^0)}{t}$. 
+\end{defn}
+
+(тут хочется теорему, которая теорема 2.) \\
+
+\begin{theorem}
+    Пусть у нас есть отображение $f:\RR^n\rightarrow \RR^m$, $V_{x_0}\rightarrow \RR^m$, причём существуют все частные производные в $V_{x^0}$ и они непрерывные в $x^0$. Тогда $f$ дифференцируема в точке $x^0$. 
+\end{theorem}
+
+(тут хочется теорему, которая теорема 4.) \\
+
+\begin{theorem}
+    Если функция $E\rightarrow \RR$, определённая на множестве $E\subset \RR^m$, дифференцируема во внутренней точке $x\in E$ этого множества, то в этой точке функция имеет все частные производные по каждой переменной и дифференциал функции однозначно определяется этими частными производными в виде
+    \[
+      df(x)h=\frac{\partial f}{\partial x_1}(x)h_1+\ldots+\frac{\partial f}{\partial x_m}(x)h_m. 
+    \]
+  \end{theorem}
 
 \end{document}
