first half bug fix

--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -369,7 +369,7 @@ $(x-y)$ - евклидово расстояние.
 Вообще, нам все эти операторы нужны для рассуждений о гладкости, сформулируем теорему: \\ 
 
 \begin{theorem}
-    $f: G\rightarrow \RR^m$, $G\subset \RR^n$ - открытое, $f$ - гладкая в окрестности $x^0$ (верхние индексы), $y^0=f(x^0)$, $g:V_{f(x^0)}\rightarrow \RR^k$, гладкая в $f(x^0)$, для $f$ и $g$ существуют линейные операторы $A$ ($x_00)$ и $B$ ($f(x_0)$). Тогда $g(f(x))$ - гладкое (?) отображение в $x_0$ с линейным оператором (?) $BA:\RR^n\rightarrow \RR^k$. 
+    $f: G\rightarrow \RR^m$, $G\subset \RR^n$ - открытое, $f$ - гладкая в окрестности $x^0$ (верхние индексы), $y^0=f(x^0)$, $g:V_{f(x^0)}\rightarrow \RR^k$, гладкая в $f(x^0)$, для $f$ и $g$ существуют линейные операторы $A$ ($x_0)$ и $B$ ($f(x_0)$). Тогда $g(f(x))$ - гладкое отображение в $x_0$ с линейным оператором $BA:\RR^n\rightarrow \RR^k$. 
 \end{theorem}
 
 \begin{proof}
@@ -404,8 +404,11 @@ $(x-y)$ - евклидово расстояние.
 Введём несколько дополнительных терминологий. Пусть у нас есть отображение $f:\RR^n\rightarrow \RR^m$, $f=(f_1, \ldots, f_m)$, $\frac{\partial f_k}{\partial x_l}$, $1\leq k\leq m$, $1\leq l\leq n$, тогда \textit{матрица Якоби} выглядит как
 
 \begin{equation*}
-    \begin{matrix}
-    \end{matrix}
+    \begin{pmatrix}
+        \frac{\partial f_1}{\partial x_1} & \dots & \frac{\partial f_m}{\partial x_1} \\
+        \vdots & \ddots & \vdots \\
+        \frac{\partial f_1}{\partial x_m} & \dots & \frac{\partial f_m}{\partial x_m}
+    \end{pmatrix}
 \end{equation*}
 
 \begin{theorem}
@@ -453,7 +456,7 @@ $(x-y)$ - евклидово расстояние.
 Нам бы ещё хотелось иметь теорему об обратном отображении. \\
 
 \begin{theorem}
-    (Об обратном отображении). Пусть $f: G\rightarrow \RR^n$, $G$ - открыто в $\RR^n$, у $f$ есть гладкие частные производные (???), $f$ - в точке $x^0$ дифференцируема $A$, $A$ - (сука??????????). Тогда $V_{x^0}$ $\exists g $ - гладкая, (?????) $f(x^0)$, $g(f(x))=x$, $g$ - дифференцируема в $f(x^0)$ $\Rightarrow$ $A^{-1}$. 
+    (Об обратном отображении). Пусть $f: G\rightarrow \RR^n$, $G$ - открыто в $\RR^n$, у $f$ есть непрерывные частные производные, $f$ - в точке $x^0$ имеет дифференциал $A$, $A$ - невырожденная. Тогда в некоторой $V_{x^0}$ существует обратная функция $g$ - гладкая, задана в как минимум какой-то окрестности $f(x^0)$, $g(f(x))=x$, $g$ - дифференцируема в $f(x^0)$ $\Rightarrow$ $A^{-1}$. 
 \end{theorem}
 
 \begin{proof}
@@ -477,12 +480,16 @@ $(x-y)$ - евклидово расстояние.
     \[
         \frac{\partial F}{\partial x_l}\bigg|_w = \sum_{k=1}^n\frac{\partial f_k}{\partial x_l}\bigg|_w 2(f_k(x)-y_k), 
     \]
-    Ну под конец не успел, слишком долго расшифровывать.
+    И теперь, если подставить в обе стороны $w$, то получатся нули. Посмотрим на правую часть как на СЛУ. Дроби фиксированы - числа из матрицы Якоби (изнач. - $A_w$), $f_k(x)$ - какие-то неизвестные. Матрица невырождена, так как нвырожденность не меняется от приведённого шевеления. Значит, решение этой системы единственно, но одно из решений мы уже знаем: $f_k(w)=y_k$. Поэтому, если мы подставим точку минимума функции $F$, то окажется, что эта точка переводится как раз в точку $y$, и тогда $F=0$, а мы в точности нашли прообраз.
 \end{proof}
 
 \section{Лекция 6.}
 
-(пропущено продолжения доказательства с прошлой лекции)\ 
+Заканчиваем доказательство теоремы об обратном отображении. Мы уже установили, что $f$ - билипшицева, что $f$ в какой-то окрестность $f(V_{x_0})$ содержит $V_{g_0}$, а также, что обратное отображение $g$ по крайней мере существует в какой-то окрестности. \ 
+
+Осталось лишь доказать один небольшой оставшийся момент. Пусть $f$ - гладкая в $x^0$, тогда мы можем расписать $f(x)=f(x^0)+A(x-x^0)+R(x)$, где $|R(x)|=0(|x-x^0|)$ (модули над векторами с данного момента - естественно, нормы). Воспользуемся тем, что любая точка $y$, достаточно близкая к $y^0$, то, по доказанному ране, у неё есть прообраз. Напишем тогда в виду прообразов: $y=y^0+A(g(y)-g(y^0))+R(g(y))$. Она выполнена для любого $y$ в некоторой окрестности $y^0$. \ 
+
+Нам хотелось бы выразить $g(y^0)$. Рассмотрим $A(g(y)-g(y^0))=y-y^0-R(g(y))$. Это равенство двух векторов $\RR^n$, матрица $A$ невырожденная, потому у неё есть обратная, применим это знание: $g(y)-g(y^0)=A^{-1}(y-y^0)-A^{-1}(R(g(y)))$. Надо оценить остаток, так как всё остальное уже хорошее. Из того, что мы уже знаем, $\forall \varepsilon>0, V_{x^0}^\varepsilon |R(x)|\leq \varepsilon |x-x^0|$ (кажется, в некоторой окрестности, поэтому размер окрестности должен быть другой переменной). Тогда $|R(g(y|\leq \varepsilon |g(y)-g(y^0)|$. Мы знаем, что $f$ билипшицева, как и обратная, поэтому продолжаем неравенство $\leq \varepsilon C |y-y^0|$. Но у нас изначально есть $|A^{-1}(R(g(y)))|\leq ||A^{-1}||\varepsilon C |y-y^0|$. И теперь, собирая всё назад, получаем, что $g(y)=g(y^0)+A^{-1}(y-y^0)+o(|y-y^0|)$, это нам и нужно было: дифференцируемость в $y^0$ и явный дифференциал. \ 
 
 Попытаемся обобщить Формулу Тейлора для многих переменных. Для начала, разберёмся с тем, как дифференцировать композицию функций многих переменных. Пусть $f:\RR^n\rightarrow \RR^m$, $g:\RR^m\rightarrow \RR^k$, $f$ - гладкая в $x^0$, $g$ - гладкая в $f(x^0)$, тогда $g(f(x^0))$ - гладкая в $x^0$, дифференциал - $BA$. 
 
@@ -839,7 +846,7 @@ $f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$.
 
 \begin{theorem}
     Пусть у нас есть отображение $f:\RR^n\rightarrow \RR^m$, $V_{x_0}\rightarrow \RR^m$, причём существуют все частные производные в $V_{x^0}$ и они непрерывные в $x^0$. Тогда $f$ дифференцируема в точке $x^0$. 
-\end{theorem}
+\end{theorem} \ 
 
 (тут хочется теорему, которая теорема 4.) \\
 
