--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -301,4 +301,50 @@
     Если в ациклическом графе есть дуга $(u, v)$, то время завершения $v$ ментше, чем время завершения $u$. 
 \end{stat}
 
+\section{Лекция 3.}
+
+\subsection{Окончание поисков в орграфе.}
+
+\begin{prob}
+    Найти в данном графе его компоненты сильной связности. 
+\end{prob}
+
+\begin{alg}
+    \textbf{Алгоритм Косараджу-Шарира.} Спервая запускается поиск в глубину для $G$, а затем запускается поиск в глубину для обращённого графа $G^R$, в котором направления всех дуг изменены на обратные (однако, компоненты связности те же). При поиске в глубину в обращённом графе, во внешнем цикле вершины рассматриваются в порядке их завершения при первом поиске в глубину, от конца к началу. После этого оказывается, что каждый запуск процедуры DFS во внешнем цикле будет находить очередной сильно связный компонент исходного графа. Время работы: $O(|V|+|E|)$, корректность обосновывается следующим:
+\end{alg}
+
+\begin{stat}
+    Пусть в графе $G$ есть сильно связные компоненты $C$ и $D$, и есть дуга $(u, v)\in E$ из $C$ в $D$. Тогда при поиске в глубину в графе $G$ самое позднее время завершения вершины в $C$ превосходит таковое в $D$. 
+\end{stat}
+
+\begin{proof}
+    Рассматриваются два случая: самое ранне обнаружение в $C$ меньше, чем в $D$, тогда рассматриваем первую обнаруженную вершину $x\in C$, у всех вершин из $D$ время окончания меньше, чем у неё. Если же это не так, то рассмотрим самую раннюю $y\in D$. Все остальные из этой компоненты будут обнаружены на рекурсивных вызовах, а из $C$ на этом этапе не обнаружатся, поэтому время окончания всех вершин из $C$ больше. 
+\end{proof}
+
+\begin{theorem}
+    Вершины каждого дерева, найденного алгоритмом Косадаржу-Шарира при втором поиске в глубину - это и есть сильно связные компоненты исходного графа. 
+\end{theorem}
+
+\begin{proof}
+    Индукция по количеству найденных компонент связности. Надо доказать, что если первые $k$ найденных компонент связности действительно таковы, то и следующая также обладает этим свойством.
+\end{proof}
+
+\subsection{Поиск в алгоритме с весами.}
+
+\begin{prob}
+    Пусть в орграфе для каждой дуги задан вес. Нужно найти пуи наименьшего веса из данной вершины $s\in V$ во все вершины графа.
+\end{prob}
+
+\begin{alg}
+    \textbf{Алгоритм Беллмана-Форда.} Для каждой вершины вычисляются значения $d_v$ - наименьший вес пути из $s$ в $v$ и $\pi_v$ - предыдущая вершина на пути наименьшего веса из $s$ в $v$. Изначально полагается, что $d_v=\infty$ и $\pi_v=\text{NULL}$ для всех вершин, и $d_s=0$. Далее алгоритм постепенно находит пути меньшего веса в другие вершины, запоминая веса лучших из найденных путей в этих переменных, Значения уменьшаются с помощью элементарной операции улучшения пути, используя некоторую дугу $(u, v)\in E$. Если $d_u+w_{u, v}<d_v$, то $d_v=d_u+w_{u, v}$, а $\pi_v=u$. Эта операция применяется, пока можно что-то улучшить. Как будет показано, для этого достаточно рассмотреть все дуги $|V|-1$ раз.
+\end{alg}
+
+\begin{stat}
+    После $i$-ой итерации внешнего цикла алгоритм Беллмана-Форда находит все пути наименьшего веса длины не более чем $i$. 
+\end{stat}
+
+\begin{proof}
+    Индукция по $i$. 
+\end{proof}
+
 \end{document}
