--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -347,4 +347,156 @@
     Индукция по $i$. 
 \end{proof}
 
+\begin{theorem}
+    Алгоритм Беллмана-Форда за $|V|\cdot|E|$ шагов или правильно вычисляет пути наименьшего веса из вершины $s$ во все вершины, или сообщает о наличии достижимого цикла отрицательного веса. 
+\end{theorem}
+
+\begin{proof}
+    Рассмотрим систему после $|V|-1$ итераций, и согласно утв. 7, нейдены все пути наименьшего веса, состоящие не более чем из $|V|-1$ дуг. Если какой-то путь ещё можно улучшить, то в этом пути какая-то вершина встретилась дважды, следовательно, найден цикл отрицательного веса. Если же ничего нельзя улучшить, то любой достижимый цикл будет иметь неотрицательный вес, так как для последовательный верщин цикла можно записать не условие улучшения и сложить по все парам.
+\end{proof}
+
+\begin{alg}
+    Алгоритм Дейкстры. Этот алгоритм решает ту же задачу, однако на каждом шаге находит очередную вершину $u$, путь наименьшего веса в которую уже известен. Тогда плгоритм рассматривает все дуги, исходящие из вершины $u$. Это позволяет ему рассматривать каждую дугу графа лишь однажды.
+\end{alg} \
+
+\begin{theorem}
+    Алгоритм Дейкстры работает правильно.
+\end{theorem}
+
+\begin{proof}
+    Индукцией по длине вычисления доказываем, что для всякой вершины $u\notin Q$, путь наименьшего пути уже построен. Для этого рассматриваются две вершины на кратчайшем пути - одна в среди рассмотренных, другая - среди не рассмотренных ($Q$), и для последней проводятся вычисления, связанные с длиной самого короткого пути для неё.
+\end{proof}
+
+\begin{remark}
+    Для представления множества $Q$ алгоритм использует особую структуру данных: \textit{очередь с приоритетами}. Каждый элемент $Q$ находится там вместе со своим текущим значением $d_v$. Также заданы операции: 
+
+    \begin{itemize}
+        \item $insert(x)$ - вставить новый элемент; 
+        \item $min()$ - выдать минимальный элемент; 
+        \item $extract_{min}()$ - выдать минимальный и удалить; 
+        \item $decrease(x, k)$ - изменить значение элемента $x\in Q$ на $k$, если $k$ меньше текущего значения $x_i$. 
+    \end{itemize}
+
+    Скорость работы алгоритма: $|V|$ раз $extract_{min}$ и $|E|$ раз $decrease$, поскольку каждая дуга обрабатывается лишь однажды. 
+\end{remark}
+
+\subsection{Окончание поиска с весами.}
+
+Сложность алгоритма Дейкстры зависит от того, как реализвана очередь с приоритетами. Тупая реализация: хранить массив $x_v$, индекцированный по $v\in V$. Тогда $decrease$ работает за $O(1)$, но $extract_{min}$ требует время $|V|$. Отсюда общее время работы - $|V|^2+|E|=O(|V|^2)$. \\
+
+\begin{alg}
+    \textbf{Улучшение Дейкстры кучей.} Используется куча, в которой значение в каждой внутренней вершине не больше, чем значение в любом из её потомков (min-heap). Операции снатовятся следующими:
+
+    \begin{itemize}
+        \item $insert(x)$ - вставить новый элемент (он становится листом), после чего дать ему всплыть до его законного места; 
+        \item $min()$ - выдать минимальный элемент (просто вернуть $x_1$); 
+        \item $extract_{min}()$ - переместить $x_n$ в $x_1$, убрав его в конце, а затем запустить исправление кучи из корня, то есть, heapify(1); 
+        \item $decrease(i, k)$ - изменить значение элемента $x_i$ на $k$, после чего дать элементу $x_i$ всплыть наверх, пока возможно. 
+    \end{itemize}
+\end{alg}
+
+\begin{remark}
+    \textit{Дать всплыть} - значит, если $x_i$ меньше своего родителя, то он обменивается так до тех пор, пока не займёт положенное место.
+\end{remark}
+
+\subsection{Нахождение минимального остовного дерева.}
+
+\begin{prob}
+    Дан неориентированный связный граф, рёбрам которого сопоставлены числа - веса. Нужно найти одно из остовных деревьев с наименьшим весом.
+\end{prob}
+
+\begin{alg}
+    \textbf{Общий принцип действия алгоритмов.} Одно за другим присоединяются рёбра к поддереву какого-то минимального, чтобы опять получилось поддерево минимального.
+\end{alg}
+
+\begin{defn}
+    \textit{Сечение} графа - разбиение множества вершин на два дизъюнктныхмножества. Ребро \textit{пересекает сечение}, если один из его концов лежит в одной части, а другой - во второй. 
+\end{defn}
+
+\begin{stat}
+    Пусть $T$ - одно из минимальных остовных деревьев графа, а $F$ - его подмножество. Пусть также имеется какое-то сечение, что никакое ребро из $FF$ его не пересекает. Тогда ребро с наименьшим весом, пересекающее это сечение, принадлежит некоторому минимальному остовному дереву $T'$, которое также содержит $F$. 
+\end{stat}
+
+\begin{proof}
+    Если $(u, v)$ - такое ребро, входит в $T$, то нам подойдёт $T$. Если его там нет, то рассмотрим цикл, который с нима полчуается и поменяем его на другое ребро из цикла, которое пересекает сечение.
+\end{proof}
+
+\begin{alg}
+    \textbf{Алгоритм Прима.} Начинаем с произвольной вершины и на каждом шаге добавляем ребро из одной из уже имеющихся вершин в некоторую незадействованную (естественно, из всевозможных рёбер выбирается то, у которого минимальный вес). \ 
+    
+    Время работы: $|E|\log |V|$, так как выполняется $|V|$ операций внешнего цикла. Операции над очередью с приоритерами - $\log|V|$. Внутренний цикл по $v$: за всё время работы алгоритма каждое ребро рассматривается дважды: с одного конца и с другого. Поэтому тело цикла в общей сложности выполняется $2|E|$ раз, и всякий раз выполняется операция над очередью с приоритетами за время $O(\log |V|)$. 
+\end{alg}
+
+\begin{remark}
+    Структура данных алгоритма - очередь с приотитетеми, в которой хранятся все вершины, ещё не попавшие в дерево. Значение $d_v$ каждойвершины $v$ - это наименьший вес ребра, соединяющий её с деревом. Также для $v$ запоминается вершина $\pi_v$, через которую $v$ соединена с деревом ребром наименьшего веса. \ 
+
+    Всякий раз, когда в дерево добавляется новая вершина $u$, для любой вершины $v$ не из дерева моэет оказаться, что ребро $(u, v)$ легче, чем ранее известное ребро наименьшего веса $(\pi_v, v)$, соединяющее её с деревом, и это тка, если $w_{u, v}<d_v$. В этом случае значения $d_v$ и $\pi_v$ обновляются, переключая $v$ на соединение с деревом через $u$. 
+\end{remark}
+
+\begin{alg}
+    \textbf{Алгоритм Крускала.} Текущее подмножество остовного дерева - лес, соединяем компоненты самыми лёгкими путями.
+\end{alg}
+
+\begin{theorem}
+    На каждом шаге работы алгоритма Крускала переменная $T$ содержит подмножество одного из остовных деревьев минимального веса.
+\end{theorem}
+
+\begin{proof}
+    Индукция по длине вычисления.
+\end{proof}
+
+\begin{stat}
+    При использовании леса непересекающихся множеств алгоритм работает за время $|E|\log |E|$ - и, стало быть, $|E|\log |V|$. 
+\end{stat}
+
+\begin{proof}
+    Сортировка займёт время $|E|\log |E|$. Далее алгоритм выполняет $3|E|$ операций над структурой данных, каждая из которых, при реализации через лес непересекающихся множеств, выполняется за время $O(\log n)$, и в общей сложности получается $|E|\log |V|$, что уже быстрее сортировки.
+\end{proof}
+
+\subsection{Структура данных для непересекающихся множеств.}
+
+\begin{prob}
+    Абстрактная структура данных для представителя разбиения множества на непересекающиеся подмножества. У каждого множества есть выжеленный элемент - \textit{представитель}. Заданы операции:
+
+    \begin{itemize}
+        \item $make\_set(x)$ - создать одноэлементное множество; 
+        \item $find\_set(x)$ - найти представитель множества, содержащего данный элемент; 
+        \item $set\_union(x, y)$ - объединение двух множеств.
+    \end{itemize}
+
+    Перед нами стоит задача: как эффективно реализовать эту абстрактную структуру данных?
+\end{prob}
+
+\begin{alg}
+    \textbf{Лес непересекающихся множеств.} У нас есть лес, если одноэлементно - просто вершинка, если представитель - корень дерева, если объединяем, то корень одного будет указывать на корень другого.
+\end{alg}
+
+\begin{remark}
+    Используются следующие улучшения: \ 
+    
+    В каждой вершине хранится её условная сложность - \textit{ранг}. Процедура $make\_set(x)$ устанавливает ранг в нуль. При объединении двух деревьев корень дерева меньшего ранга станет указывать на корень дерева большего ранга. Если оба корня имеют одинаковый ранг, то их объединение получит ранг, больший на единицу. \ 
+
+    При выполнении каждой операции поиска все встреченные на пути вершины пренаправятся в корень для ускорения последующих операций цикла.
+\end{remark}
+
+\begin{stat}
+    Пусь всего элементов - $n$, и к ним применяется $m$ операций. Тогда, с применением первого улучшения, они выполняются за время $O(m \log n)$. 
+\end{stat}
+
+\begin{proof}
+    Смотрим на дерево, через логарифмы вычисляем.
+\end{proof}
+
+\begin{theorem}
+    (\textbf{Тарьян.}) Пусть всего элементов - $n$, и над ними выполняется $m$ операций. Тогда, с применением первого и второго улучшения, эти операции выполняются за совокупное время $m\alpha (n)$, где $\alpha(n)$ - обратная функция к $A_n(n)$, а $A(k, n)=A_k(n)$ - \textit{функция Аккермана}. 
+\end{theorem}
+
+\begin{prob}
+    Дан неориентированный граф - возможно, несвязный. Надо определить его компоненты связности и научиться быстро отвечать на вопрос о том, лежат ли две данные вершины в одной компоненте.
+\end{prob}
+
+\begin{alg}
+    Алгоритм пишется через представление компонент связности в виде структуры данных для непересекающихся множеств.
+\end{alg}
+
 \end{document}
